# moveit_monitoring

./: CMakeLists.txt  README.md  moveit_monitoring_plugin_description.xml  package.xml
config/: monitoring.yaml
launch/: demo_parameters.launch
src/: monitor_capability.cpp
