<?xml version="1.0"?>
<package format="2">
  <name>moveit_monitoring</name>
  <version>0.1.0</version>
  <description>Monitor the state of MoveIt's planning scene in the diagnostics system</description>

  <maintainer email="me@v4hn.de">v4hn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>diagnostic_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_move_group</depend>

  <export>
   <moveit_ros_move_group plugin="${prefix}/moveit_monitoring_plugin_description.xml"/>
  </export>

</package>
